# hackathon-sia

./: .gitignore  LICENSE  README.md  final_hook_features.csv  pyproject.toml  r-train.ipynb  ramos.ipynb  text_classification_results.csv  valence_arousal_results.csv
csv_features/: bluebird_factor.csv  loopable_simple.csv  pet_presence.csv  sync_score_ordered.csv
data/: X_test.csv  X_train.csv  y_train.csv
