[project]
name = "hackathon-sia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "nvidia-dali-cuda120>=2.0.0",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pytesseract>=0.3.13",
    "scenedetect>=0.6.7.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
